--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,5 @@
+name: ci
+
 on:
   push:
     branches: [ "master" ]
@@ -12,9 +14,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.19
+        go-version: 1.21.1
 
     - name: Install goimports
       run: go install golang.org/x/tools/cmd/goimports@latest
@@ -37,3 +39,9 @@ jobs:
 
     - name: Vet
       run: go vet -v ./...
+
+    - name: Install staticcheck
+      run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+    - name: staticcheck
+      run: staticcheck ./...
